// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render SiteHeader component as not-root. 1`] = `
<Headroom
  style={
    Object {
      "MozTransition": "all 0.7s ease-in-out",
      "OTransaction": "all 0.7s ease-in-out",
      "Transition": "all 0.7s ease-in-out",
      "WebkitTranstion": "all 0.7s ease-in-out",
    }
  }
>
  <header
    className="bb b--hot-pink center site-header flex mb3 bw1"
    style={
      Object {
        "background": "#282C34",
      }
    }
  >
    <div
      className="w-35-ns flex flex-row center source-sans fw3"
    >
      <h3
        className="lato f4 ph3 mv2 pv2 flex-auto br b--mid-gray light-silver fw3"
      >
        <MockedLink
          className="shadow-none flex justify-center items-center"
          to="/"
        >
          about
        </MockedLink>
      </h3>
      <h3
        className="lato f4 ph3 mv2 pv2 flex-auto br b--mid-gray light-silver fw3"
      >
        <MockedLink
          className="shadow-none flex justify-center items-center"
          to="/posts"
        >
          words
        </MockedLink>
      </h3>
      <h3
        className="lato f4 ph3 mv2 pv2 flex-auto br b--mid-gray light-silver fw3"
      >
        <MockedLink
          className="shadow-none flex justify-center items-center"
          to="/photography"
        >
          pictures
        </MockedLink>
      </h3>
      <h3
        className="lato f4 ph3 mv2 pv2 flex-auto light-silver fw3"
      >
        <MockedLink
          className="shadow-none flex justify-center items-center"
          to="/curriculum-vitae"
        >
          C.V.
        </MockedLink>
      </h3>
    </div>
  </header>
</Headroom>
`;

exports[`Render SiteHeader component. 1`] = `
<Headroom
  style={
    Object {
      "MozTransition": "all 0.7s ease-in-out",
      "OTransaction": "all 0.7s ease-in-out",
      "Transition": "all 0.7s ease-in-out",
      "WebkitTranstion": "all 0.7s ease-in-out",
    }
  }
>
  <header
    className="bb b--hot-pink center site-header flex mb3 "
    style={
      Object {
        "background": "#282C34",
      }
    }
  >
    <div
      className="w-35-ns flex flex-row center source-sans fw3"
    >
      <h3
        className="lato f4 ph3 mv2 pv2 flex-auto br b--mid-gray white-90 fw4"
      >
        <MockedLink
          className="shadow-none flex justify-center items-center"
          to="/"
        >
          about
        </MockedLink>
      </h3>
      <h3
        className="lato f4 ph3 mv2 pv2 flex-auto br b--mid-gray light-silver fw3"
      >
        <MockedLink
          className="shadow-none flex justify-center items-center"
          to="/posts"
        >
          words
        </MockedLink>
      </h3>
      <h3
        className="lato f4 ph3 mv2 pv2 flex-auto br b--mid-gray light-silver fw3"
      >
        <MockedLink
          className="shadow-none flex justify-center items-center"
          to="/photography"
        >
          pictures
        </MockedLink>
      </h3>
      <h3
        className="lato f4 ph3 mv2 pv2 flex-auto light-silver fw3"
      >
        <MockedLink
          className="shadow-none flex justify-center items-center"
          to="/curriculum-vitae"
        >
          C.V.
        </MockedLink>
      </h3>
    </div>
  </header>
</Headroom>
`;
